--- a/src/app/modules/journal-voucher/search-jv-pending/search-jv-pending.component.html
+++ b/src/app/modules/journal-voucher/search-jv-pending/search-jv-pending.component.html
@@ -171,7 +171,7 @@
                 <ng-container matColumnDef="Edit">
                     <mat-header-cell *matHeaderCellDef>Edit</mat-header-cell>
                     <mat-cell *matCellDef="let jv">
-                        <button (click)="editJv(jv)" *ngIf="CheckEditStatus(jv) && currentActivity.U" color="primary"
+                        <button (click)="editJv(jv)" *ngIf="CheckEditStatus(jv) && currentActivity?.U" color="primary"
                                 mat-icon-button>
                             <mat-icon style="margin-left: 2px;" title="View jv">edit</mat-icon>
                         </button>
