--- a/src/app/modules/loan/rejected-loan/rejected-loan.component.html
+++ b/src/app/modules/loan/rejected-loan/rejected-loan.component.html
@@ -157,7 +157,7 @@
                                 <!--                                        *ngIf="!CheckEditStatus(loan)">-->
                                 <!--                                    <mat-icon style="margin-left: 5px;" title="View Loan">edit</mat-icon>-->
                                 <!--                                </button>-->
-                                <button (click)="ViewOrr(loan)" *ngIf="currentActivity.R" color="primary"
+                                <button (click)="ViewOrr(loan)" *ngIf="currentActivity?.R" color="primary"
                                         mat-icon-button>
                                     <mat-icon class="text-green" style="margin-left: 5px;" title="View Loan">
                                         visibility
