--- a/src/app/modules/reschedule-cases/refer-back-reschedule-cases/refer-back-reschedule-cases.component.html
+++ b/src/app/modules/reschedule-cases/refer-back-reschedule-cases/refer-back-reschedule-cases.component.html
@@ -151,7 +151,7 @@
             <ng-container matColumnDef="View">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>View</mat-header-cell>
                 <mat-cell *matCellDef="let row">
-                    <button *ngIf="currentActivity.U" color="primary" mat-icon-button>
+                    <button *ngIf="currentActivity?.U" color="primary" mat-icon-button>
                         <mat-icon (click)="editRefer(row)" style="margin-left: 5px" title="Edit row"
                         >edit
                         </mat-icon
@@ -163,7 +163,7 @@
             <ng-container matColumnDef="Submit">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>Submit</mat-header-cell>
                 <mat-cell *matCellDef="let row">
-                    <mat-checkbox (click)="getRow(row)" *ngIf="currentActivity.U"></mat-checkbox>
+                    <mat-checkbox (click)="getRow(row)" *ngIf="currentActivity?.U"></mat-checkbox>
                 </mat-cell>
             </ng-container>
 
@@ -194,7 +194,7 @@
 
     </div>
 
-    <div *ngIf="allowSubmit && currentActivity.U" class="col-lg-12 text-center py-4 border-t px-4">
+    <div *ngIf="allowSubmit && currentActivity?.U" class="col-lg-12 text-center py-4 border-t px-4">
         <button (click)="SubmitData()" class="mr-2" color="primary" mat-raised-button>
             <mat-icon class="mr-2">check_circle</mat-icon>
             Submit
