--- a/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
@@ -158,7 +158,7 @@
     <!--                            <td style="width: 20%">{{child.StatusName}}</td>-->
 
     <!--                            <td style="width: 20%">-->
-    <!--                                <button class="ml-2" mat-icon-button color="primary" *ngIf="CheckEditStatus(child) && currentActivity.U"-->
+    <!--                                <button class="ml-2" mat-icon-button color="primary" *ngIf="CheckEditStatus(child) && currentActivity?.U"-->
     <!--                                        (click)="editTourPlan(child)">-->
     <!--                                    <mat-icon style="margin-left: 5px;" title="Edit Tour Plan">edit</mat-icon>-->
     <!--                                </button>-->
