--- a/src/app/modules/user-management/Role/create-edit-role/create-edit-role.component.html
+++ b/src/app/modules/user-management/Role/create-edit-role/create-edit-role.component.html
@@ -40,7 +40,7 @@
 
     <button
         (click)="onSubmit()"
-        *ngIf="currentActivity.U"
+        *ngIf="currentActivity?.U"
         [color]="'primary'"
         [disabled]="viewLoading"
         class=" bg-green"
