--- a/src/app/modules/customer/correction-phone/correction-phone.component.html
+++ b/src/app/modules/customer/correction-phone/correction-phone.component.html
@@ -130,7 +130,7 @@
                         </table>
                         <div class="row">
                             <div class="col-lg-12">
-                                <input (click)="onUpdate()" *ngIf="currentActivity.U" class=" mat-raised-button mat-button-base mat-primary mr-4 searchLCBtn bg-green"
+                                <input (click)="onUpdate()" *ngIf="currentActivity?.U" class=" mat-raised-button mat-button-base mat-primary mr-4 searchLCBtn bg-green"
                                        color="primary"
                                        mat-raised-button type="button" value="Update"/>
                                 <input (click)="onCancel()" class=" mat-raised-button bg-red-500 mat-button-base mat-primary searchLCBtn" color="primary"
