--- a/src/app/modules/deceased-customer/referback-deceased/referback-deceased.component.html
+++ b/src/app/modules/deceased-customer/referback-deceased/referback-deceased.component.html
@@ -71,12 +71,12 @@
                     <mat-header-cell *matHeaderCellDef>View</mat-header-cell>
                     <mat-cell *matCellDef="let DeceasedCustomer">
 
-                        <button (click)="editDeceased(DeceasedCustomer)" *ngIf="currentActivity.U" color="primary"
+                        <button (click)="editDeceased(DeceasedCustomer)" *ngIf="currentActivity?.U" color="primary"
                                 mat-icon-button>
                             <mat-icon style="margin-left: 2px;" title="View">edit</mat-icon>
                         </button>
 
-                        <button (click)="viewDeceased(DeceasedCustomer)" *ngIf="currentActivity.R" color="primary"
+                        <button (click)="viewDeceased(DeceasedCustomer)" *ngIf="currentActivity?.R" color="primary"
                                 mat-icon-button>
                             <mat-icon style="margin-left: 2px;" title="View">visibility</mat-icon>
                         </button>
