--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -210,7 +210,7 @@
                         <div class="row">
                             <div class="col-lg-12  text-right relative">
                                 <div class="bg-white float-right">
-                                    <button (click)="removeImage(url,i)" *ngIf="!viewonly && currentActivity.D"
+                                    <button (click)="removeImage(url,i)" *ngIf="!viewonly && currentActivity?.D"
                                             class="close-button float-right absolute right-4 top-0 bg-red-500"
                                             mat-icon-button>
                                         <!-- X -->
@@ -244,7 +244,7 @@
         </div>
 
         <div>
-            <input (change)="onSelectFileV($event)" (click)="ifResetRequiredV()" *ngIf="!viewonly && currentActivity.C"
+            <input (change)="onSelectFileV($event)" (click)="ifResetRequiredV()" *ngIf="!viewonly && currentActivity?.C"
                    [required] accept="video/*"
                    formControlName="fileV" type='file'/>
         </div>
@@ -259,7 +259,7 @@
                     <div class="row">
                         <div class="col-lg-12 text-right relative">
                             <div class="bg-white float-right">
-                                <button (click)="removeVideo(url,i)" *ngIf="!viewonly && currentActivity.D"
+                                <button (click)="removeVideo(url,i)" *ngIf="!viewonly && currentActivity?.D"
                                         class="close-button float-right absolute right-4 top bg-red-500"
                                         mat-icon-button>
                                     <!-- X -->
@@ -309,26 +309,26 @@
         <div class="col-lg-12 text-right">
             <div class="float-right mr-4 mt-2 border-t py-2">
                 <button (click)="save()"
-                        *ngIf="isSave && currentActivity.C" class="ml-2 bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary" mat-raised-button>
+                        *ngIf="isSave && currentActivity?.C" class="ml-2 bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary" mat-raised-button>
                     <mat-icon class="mr-2">save</mat-icon>
                     Save
                 </button>
                 <button (click)="changeStatus('S')"
-                        *ngIf="isSubmit && currentActivity.U" class="ml-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" color="primary"
+                        *ngIf="isSubmit && currentActivity?.U" class="ml-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" color="primary"
                         mat-raised-button>
                     <mat-icon class="mr-2">check_circle</mat-icon>
                     Submit
                 </button>
-                <button (click)="changeStatus('R')" *ngIf="isReffer && currentActivity.U" class="ml-2" color="primary"
+                <button (click)="changeStatus('R')" *ngIf="isReffer && currentActivity?.U" class="ml-2" color="primary"
                         mat-raised-button>
                     Reffer
                     Back
                 </button>
-                <button (click)="changeStatus('A')" *ngIf="isAuthorize && currentActivity.U" class="ml-2" color="primary"
+                <button (click)="changeStatus('A')" *ngIf="isAuthorize && currentActivity?.U" class="ml-2" color="primary"
                         mat-raised-button>
                     Authorize
                 </button>
-                <button (click)="changeStatus('C')" *ngIf="isDelete && currentActivity.D" class="ml-2 bg-danger" color="primary"
+                <button (click)="changeStatus('C')" *ngIf="isDelete && currentActivity?.D" class="ml-2 bg-danger" color="primary"
                         mat-raised-button>
                     <mat-icon class="mr-2 ">delete_forever</mat-icon>
                     Delete
