--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -138,14 +138,14 @@
                         <ng-container matColumnDef="Actions">
                             <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                             <mat-cell *matCellDef="let loanutilization">
-                                <button (click)="editloanutilization(loanutilization)" *ngIf="CheckEditStatus(loanutilization) && currentActivity.U"
+                                <button (click)="editloanutilization(loanutilization)" *ngIf="CheckEditStatus(loanutilization) && currentActivity?.U"
                                         color="primary"
                                         mat-icon-button>
                                     <mat-icon style="margin-left: 5px;" title="Edit land">edit</mat-icon>
                                 </button>
 
 
-                                <button (click)="viewloanutilization(loanutilization)" *ngIf="CheckViewStatus(loanutilization) && currentActivity.R"
+                                <button (click)="viewloanutilization(loanutilization)" *ngIf="CheckViewStatus(loanutilization) && currentActivity?.R"
                                         color="primary"
                                         mat-icon-button>
                                     <mat-icon class="text-green" title="View land">visibility</mat-icon>
