--- a/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
+++ b/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
@@ -146,7 +146,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12 mt-1p ml-1p mb-1p">
-                <button (click)="saveLoanDbr()" *ngIf="!isReadOnly && currentActivity.C" class="btn btn-primary bg-green"
+                <button (click)="saveLoanDbr()" *ngIf="!isReadOnly && currentActivity?.C" class="btn btn-primary bg-green"
                         color="primary" mat-raised-button
                         type="button">
                     <mat-icon class="mr-2">save</mat-icon>
