--- a/src/app/modules/loan/cl-application-header/cl-application-header.component.html
+++ b/src/app/modules/loan/cl-application-header/cl-application-header.component.html
@@ -72,7 +72,7 @@
                 <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
 
 
-                    <button (click)="getLcNoAutoAssignedByApi()" *ngIf="currentActivity.C" [disabled]="checkDisable()"
+                    <button (click)="getLcNoAutoAssignedByApi()" *ngIf="currentActivity?.C" [disabled]="checkDisable()"
                             class="mt-2 btn btn-primary w-full"
                             color="primary" mat-raised-button type="button">
                         Check LC #
@@ -146,14 +146,14 @@
 </form>
 <div class="form-group kt-form__group row pt-2 ml-0.5">
     <div class="col-lg-12 pl-1">
-        <button (click)="onSaveApplicationHeader()" *ngIf="currentActivity.C" [disabled]="isSaveApplicationHeaderInProgress"
+        <button (click)="onSaveApplicationHeader()" *ngIf="currentActivity?.C" [disabled]="isSaveApplicationHeaderInProgress"
                 class="btn btn-primary" color="primary" mat-raised-button style="background-color: #01671B;"
                 type="button">
             <mat-icon class="mr-2">save</mat-icon>
             Save
         </button>
         <button (click)="onClearSavApplicationHeader()"
-                *ngIf="currentActivity.C"
+                *ngIf="currentActivity?.C"
                 class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="danger" mat-raised-button type="button">
             <mat-icon class="mr-2"> clear_all</mat-icon>
             Clear
