--- a/src/app/modules/loan/cl-customers/cl-customers.component.html
+++ b/src/app/modules/loan/cl-customers/cl-customers.component.html
@@ -50,11 +50,11 @@
                 </div>
                 <div class="col-lg-12  kt-margin-bottom-20-mobile flex">
                     <button (click)="attachCustomer()"
-                            *ngIf="currentActivity.C" class=" mb-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" color="primary" type="button">
+                            *ngIf="currentActivity?.C" class=" mb-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" color="primary" type="button">
                         <mat-icon class="mr-2">add</mat-icon>
                         Attach
                     </button>
-                    <a (click)="viewCustomer()" *ngIf="currentActivity.C"
+                    <a (click)="viewCustomer()" *ngIf="currentActivity?.C"
                        class=" mx-3 self-center cursor-pointer text-green">Search Customer </a>
                 </div>
 
@@ -95,7 +95,7 @@
                                 <td>
                                     {{returnKeyValuePair(customer.RelationID, 'relation')}}
                                 </td>
-                                <td (click)="deleteRow(customer,i)" *ngIf="currentActivity.D" style="cursor:pointer;">
+                                <td (click)="deleteRow(customer,i)" *ngIf="currentActivity?.D" style="cursor:pointer;">
                                     <mat-icon class="text-red-500">
                                         delete
                                     </mat-icon>
@@ -109,7 +109,7 @@
             </div>
             <div class="form-group kt-form__group row">
                 <div class="col-lg-3 mt-1p">
-                    <button (click)="onSaveCustomer()" *ngIf="currentActivity.C" class="btn btn-primary"
+                    <button (click)="onSaveCustomer()" *ngIf="currentActivity?.C" class="btn btn-primary"
                             color="primary" mat-raised-button
                             style="background-color: #01671B;" type="button">
                         <mat-icon class="mr-2">save</mat-icon>
