--- a/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
+++ b/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
@@ -104,14 +104,14 @@
                 </div>
                 <div class="form-group kt-form__group row">
                     <div class="col-lg-12 mb-2">
-                        <button (click)="onSaveLegalHeirsForm()" *ngIf="currentActivity.C"
+                        <button (click)="onSaveLegalHeirsForm()" *ngIf="currentActivity?.C"
                                 class="btn btn-primary bg-green " color="primary" mat-raised-button
                                 type="button">
                             <mat-icon class="mr-2">save</mat-icon>
                             Save
                         </button>
                         <button (click)="onClearLegalHeirsForm()"
-                                *ngIf="currentActivity.C"
+                                *ngIf="currentActivity?.C"
                                 class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="danger" type="button">
                             <mat-icon class="mr-2"> clear_all</mat-icon>
                             Clear
@@ -143,7 +143,7 @@
                                     <td>{{legal.Dob}}</td>
                                     <td>{{legal.RelationName}}</td>
                                     <td>
-                                        <button (click)="onDeleteLegalHeirs(legal.ID,i)" *ngIf="currentActivity.D" class="btn btn-xs btn-primary"
+                                        <button (click)="onDeleteLegalHeirs(legal.ID,i)" *ngIf="currentActivity?.D" class="btn btn-xs btn-primary"
                                                 type="button">Delete
                                         </button>
                                     </td>
