--- a/src/app/modules/loan/cl-purpose/cl-purpose.component.html
+++ b/src/app/modules/loan/cl-purpose/cl-purpose.component.html
@@ -9,7 +9,7 @@
                         <input appNumberOnly formControlName="GlSubID" matInput placeholder="Enter GL Code"/>
                         <mat-error *ngIf="hasError('GlSubID', 'required')">GL Code <strong>required</strong></mat-error>
                     </mat-form-field>
-                    <button (click)="GlschemeCropConfiguration()" *ngIf="currentActivity.C" class=" w-5/12 ml-1 btn btn-primary"
+                    <button (click)="GlschemeCropConfiguration()" *ngIf="currentActivity?.C" class=" w-5/12 ml-1 btn btn-primary"
                             color="primary"
                             mat-raised-button type="button">
                         Get GL Code #
@@ -163,13 +163,13 @@
             </div>
             <div class="form-group kt-form__group row pb-2">
                 <div class="col-lg-12 mt-1p">
-                    <button (click)="onSavePurpose()" *ngIf="currentActivity.C" class="btn btn-primary" color="primary"
+                    <button (click)="onSavePurpose()" *ngIf="currentActivity?.C" class="btn btn-primary" color="primary"
                             mat-raised-button style="background-color: #01671B;" type="button">
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
                     </button>
                     <button (click)="onClearSavePurpose()"
-                            *ngIf="currentActivity.C"
+                            *ngIf="currentActivity?.C"
                             class="mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="danger" type="button">
                         <mat-icon class="mr-2"> clear_all</mat-icon>
                         Clear
@@ -213,10 +213,10 @@
                     <td>
 
 
-                        <mat-icon (click)="onEditPurpose(loan)" *ngIf="currentActivity.U"
+                        <mat-icon (click)="onEditPurpose(loan)" *ngIf="currentActivity?.U"
                                   class="cursor-pointer text-green">edit
                         </mat-icon>
-                        <mat-icon (click)="onDeletePurpose(loan,i)" *ngIf="currentActivity.D"
+                        <mat-icon (click)="onDeletePurpose(loan,i)" *ngIf="currentActivity?.D"
                                   class="cursor-pointer text-red-500 ml-3">delete
                         </mat-icon>
 
