--- a/src/app/modules/loan/cl-securities/cl-securities.component.html
+++ b/src/app/modules/loan/cl-securities/cl-securities.component.html
@@ -72,14 +72,14 @@
                 </div>
                 <div class="form-group kt-form__group row">
                     <div class="col-lg-12 mb-2">
-                        <button (click)="onSaveLoanSecurities()" *ngIf="currentActivity.C" [disabled]="isSecuritiesFormInProgress"
+                        <button (click)="onSaveLoanSecurities()" *ngIf="currentActivity?.C" [disabled]="isSecuritiesFormInProgress"
                                 class="btn btn-primary" color="primary" mat-raised-button style="background-color: #01671B;"
                                 type="button">
                             <mat-icon class="mr-2">save</mat-icon>
                             Save
                         </button>
                         <button (click)="clearLoanSecuritiesForm()"
-                                *ngIf="currentActivity.C"
+                                *ngIf="currentActivity?.C"
                                 class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
                                 color="danger" mat-raised-button type="button">
                             <mat-icon class="mr-2"> clear_all</mat-icon>
@@ -113,7 +113,7 @@
                                     <td>
 
 
-                                        <mat-icon (click)="showUpdateSecuritiesForm(loan)" *ngIf="currentActivity.U"
+                                        <mat-icon (click)="showUpdateSecuritiesForm(loan)" *ngIf="currentActivity?.U"
                                                   class="text-green cursor-pointer">
                                             edit
                                         </mat-icon>
@@ -178,7 +178,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <button (click)="attachCustomerLandtoLoan()" *ngIf="currentActivity.C" class="btn btn-primary float-right" color="primary"
+                <button (click)="attachCustomerLandtoLoan()" *ngIf="currentActivity?.C" class="btn btn-primary float-right" color="primary"
                         mat-raised-button
                         type="button">
                     Attach
