--- a/src/app/modules/loan/referback-loan-from-CAD/referback-loan-from-CAD.component.html
+++ b/src/app/modules/loan/referback-loan-from-CAD/referback-loan-from-CAD.component.html
@@ -150,11 +150,11 @@
                             <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
                             <mat-cell *matCellDef="let loan">
 
-                                <button (click)="editLoan(loan)" *ngIf="CheckEditStatus(loan) && currentActivity.U" color="primary"
+                                <button (click)="editLoan(loan)" *ngIf="CheckEditStatus(loan) && currentActivity?.U" color="primary"
                                         mat-icon-button>
                                     <mat-icon style="margin-left: 5px;" title="View Loan">edit</mat-icon>
                                 </button>
-                                <button (click)="ViewOrr(loan)" *ngIf="currentActivity.R" color="primary"
+                                <button (click)="ViewOrr(loan)" *ngIf="currentActivity?.R" color="primary"
                                         mat-icon-button>
                                     <mat-icon class="text-green" style="margin-left: 5px;" title="View Loan">
                                         visibility
