--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -127,18 +127,18 @@
                         <ng-container matColumnDef="actions">
                             <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                             <mat-cell *matCellDef="let request">
-                                <button (click)="downloadFile(request.Cnic,request.NDCId)" *ngIf="currentActivity.U" color="primary"
+                                <button (click)="downloadFile(request.Cnic,request.NDCId)" *ngIf="currentActivity?.U" color="primary"
                                         mat-icon-button>
                                     <mat-icon title="download">file_download</mat-icon>
                                 </button>
 
-                                <button (click)="DeleteUser(request)" *ngIf="submitDeleteStatus(request) && currentActivity.D"
+                                <button (click)="DeleteUser(request)" *ngIf="submitDeleteStatus(request) && currentActivity?.D"
                                         color="primary"
                                         mat-icon-button>
                                     <mat-icon title="Delete">delete</mat-icon>
                                 </button>
 
-                                <button (click)="SubmitUser(request)" *ngIf="submitSubmitStatus(request) && currentActivity.U"
+                                <button (click)="SubmitUser(request)" *ngIf="submitSubmitStatus(request) && currentActivity?.U"
                                         color="primary"
                                         mat-icon-button>
                                     <mat-icon>check_circle</mat-icon>
