--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -189,12 +189,12 @@
             </div>
             <div *ngIf="!isMCO" class="row mt-2 mr-1">
                 <div class="col-lg-12 text-right">
-                    <button (click)="save()" *ngIf="currentActivity.C" class="ml-2 bg-green" color="primary"
+                    <button (click)="save()" *ngIf="currentActivity?.C" class="ml-2 bg-green" color="primary"
                             mat-raised-button>
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
                     </button>
-                    <button (click)="submit()" *ngIf="currentActivity.U" class="ml-2" color="primary" mat-raised-button>
+                    <button (click)="submit()" *ngIf="currentActivity?.U" class="ml-2" color="primary" mat-raised-button>
                         <mat-icon class="mr-2">check_circle</mat-icon>
                         Submit
                     </button>
