--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -64,7 +64,7 @@
                                                appNumberOnly autocomplete="off"
                                                formControlName="TourDate" matInput maxlength="30"
                                                placeholder="Date of Visit"/>
-                                        <mat-datepicker-toggle [disabled]="(!zone || !edit_mode) && currentActivity.R" [for]="picker"
+                                        <mat-datepicker-toggle [disabled]="(!zone || !edit_mode) && currentActivity?.R" [for]="picker"
                                                                matSuffix></mat-datepicker-toggle>
                                         <mat-datepicker #picker></mat-datepicker>
                                     </mat-form-field>
@@ -72,7 +72,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field appearance="outline" class=" mat-form-field-fluid w-full">
                                         <mat-label>Tour Plan<strong class="matMandatory">*</strong></mat-label>
-                                        <mat-select [disabled]="!edit_mode && currentActivity.R"
+                                        <mat-select [disabled]="!edit_mode && currentActivity?.R"
                                                     formControlName="TourPlanId">
                                             <mat-option>
                                                 Select
@@ -159,7 +159,7 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">No. Of Defaulters Contacted</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                            <input [readonly]="!edit_mode && currentActivity?.R" appNumberOnly autocomplete="off"
                                                    formControlName="NoOfDefaulterContacted"
                                                    matInput placeholder="No. Of Defaulters Contacted"/>
                                         </mat-form-field>
@@ -169,7 +169,7 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Results Of Contacts So Made</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                            <input [readonly]="!edit_mode && currentActivity?.R" appNumberOnly autocomplete="off"
                                                    formControlName="ResultContactMade"
                                                    matInput placeholder="Results Of Contacts So Made"/>
                                         </mat-form-field>
@@ -178,7 +178,7 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Measure Boosting Up Record</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off"
+                                            <input [readonly]="!edit_mode && currentActivity?.R" autocomplete="off"
                                                    formControlName="MeasureBoostUpRecord"
                                                    matInput placeholder="Measure Boosting Up Record"/>
                                         </mat-form-field>
@@ -187,7 +187,7 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Remarks</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off" formControlName="Remarks"
+                                            <input [readonly]="!edit_mode && currentActivity?.R" autocomplete="off" formControlName="Remarks"
                                                    matInput placeholder="Remarks"/>
                                         </mat-form-field>
                                     </div>
@@ -205,25 +205,25 @@
 
             <div class="row mt-2 mr-1">
                 <div class="col-lg-12 text-right">
-                    <button (click)="saveTourDiary()" *ngIf="isUpdate==false && currentActivity.C && edit_mode"
+                    <button (click)="saveTourDiary()" *ngIf="isUpdate==false && currentActivity?.C && edit_mode"
                             class="mr-2 bg-green" color="primary" mat-raised-button
                             type="button">
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
                     </button>
-                    <button (click)="saveTourDiary()" *ngIf="isUpdate==true && currentActivity.U" class="mr-2 bg-green"
+                    <button (click)="saveTourDiary()" *ngIf="isUpdate==true && currentActivity?.U" class="mr-2 bg-green"
                             color="primary" mat-raised-button
                             type="button">
                         <mat-icon class="mr-2">save</mat-icon>
                         Update
                     </button>
-                    <button (click)="changeStatus('','S')" *ngIf="isUpdate==true && currentActivity.U" class="mr-2" color="primary"
+                    <button (click)="changeStatus('','S')" *ngIf="isUpdate==true && currentActivity?.U" class="mr-2" color="primary"
                             mat-raised-button type="button">
                         <mat-icon class="mr-2">check_circle</mat-icon>
                         Submit
                     </button>
                     <button (click)="onClearForm()"
-                            *ngIf="currentActivity.C"
+                            *ngIf="currentActivity?.C"
                             class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="danger" mat-raised-button type="button">
                         <mat-icon class="mr-2"> clear_all</mat-icon>
                         Clear
@@ -328,11 +328,11 @@
                         </td>
                         <td class="border-r border-gray-400">
                             <button (click)="editData(single_list); container.scrollTop = 0"
-                                    *ngIf="checkStatus(single_list,'edit') && currentActivity.U && edit_mode"
+                                    *ngIf="checkStatus(single_list,'edit') && currentActivity?.U && edit_mode"
                                     mat-icon-button>
                                 <mat-icon>edit</mat-icon>
                             </button>
-                            <button (click)="deleteData(single_list)" *ngIf="checkStatus(single_list,'delete') && currentActivity.D && edit_mode"
+                            <button (click)="deleteData(single_list)" *ngIf="checkStatus(single_list,'delete') && currentActivity?.D && edit_mode"
                                     mat-icon-button>
                                 <mat-icon>delete</mat-icon>
                             </button>
