--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -77,7 +77,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field appearance="outline" class=" mat-form-field-fluid w-full">
                                         <mat-label>Tour Plan<strong class="matMandatory">*</strong></mat-label>
-                                        <mat-select [disabled]="!edit_mode && currentActivity.R"
+                                        <mat-select [disabled]="!edit_mode && currentActivity?.R"
                                                     formControlName="TourPlanId">
                                             <mat-option>
                                                 Select
@@ -120,7 +120,7 @@
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Departure Time<strong
                                                 class="matMandatory">*</strong></mat-label>
-                                            <input [disabled]="!edit_mode && currentActivity.R" [format]="DateFormat()"
+                                            <input [disabled]="!edit_mode && currentActivity?.R" [format]="DateFormat()"
                                                    [ngxTimepicker]="timepickerDeparture"
                                                    formControlName="DepartureFromTime" matInput
                                                    placeholder="Departure Time"
@@ -153,7 +153,7 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Arrival Time</mat-label>
-                                            <input [disabled]="!edit_mode && currentActivity.R" [format]="DateFormat()"
+                                            <input [disabled]="!edit_mode && currentActivity?.R" [format]="DateFormat()"
                                                    [ngxTimepicker]="timepickerArrival"
                                                    formControlName="ArrivalAtTime"
                                                    matInput readonly
@@ -175,7 +175,7 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">No. Of Defaulters Contacted</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                            <input [readonly]="!edit_mode && currentActivity?.R" appNumberOnly
                                                    autocomplete="off"
                                                    formControlName="NoOfDefaulterContacted"
                                                    matInput placeholder="No. Of Defaulters Contacted"/>
@@ -186,7 +186,7 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Results Of Contacts So Made</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                            <input [readonly]="!edit_mode && currentActivity?.R" appNumberOnly
                                                    autocomplete="off"
                                                    formControlName="ResultContactMade" matInput
                                                    placeholder="Results Of Contacts So Made"/>
@@ -197,7 +197,7 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Measure Boosting Up Record</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                            <input [readonly]="!edit_mode && currentActivity?.R" appNumberOnly
                                                    autocomplete="off"
                                                    formControlName="MeasureBoostUpRecord" matInput
                                                    placeholder="Measure Boosting Up Record"/>
@@ -208,7 +208,7 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Remarks</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off"
+                                            <input [readonly]="!edit_mode && currentActivity?.R" autocomplete="off"
                                                    formControlName="Remarks"
                                                    matInput placeholder="Remarks"/>
                                         </mat-form-field>
@@ -223,20 +223,20 @@
                         <div class="row mt-2 mr-1">
                             <div class="col-lg-12 text-right">
                                 <button (click)="saveTourDiary()"
-                                        *ngIf="isUpdate==false && currentActivity.C && edit_mode"
+                                        *ngIf="isUpdate==false && currentActivity?.C && edit_mode"
                                         class="mr-2 bg-green" color="primary" mat-raised-button
                                         type="button">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Save
                                 </button>
                                 <button (click)="saveTourDiary()"
-                                        *ngIf="isUpdate==true && currentActivity.D && edit_mode"
+                                        *ngIf="isUpdate==true && currentActivity?.D && edit_mode"
                                         class="mr-2 bg-green" color="primary" mat-raised-button
                                         type="button">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Update
                                 </button>
-                                <button (click)="changeStatus('','S')" *ngIf="currentActivity.U && edit_mode"
+                                <button (click)="changeStatus('','S')" *ngIf="currentActivity?.U && edit_mode"
                                         [disabled]="checkDisable" class="mr-2"
                                         color="primary" mat-raised-button
                                         type="button">
@@ -244,7 +244,7 @@
                                     Submit
                                 </button>
                                 <button (click)="onClearForm()"
-                                        *ngIf="currentActivity.C && edit_mode"
+                                        *ngIf="currentActivity?.C && edit_mode"
                                         class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
                                         color="danger" mat-raised-button
                                         type="button">
@@ -287,14 +287,14 @@
                                     <td class="border-r border-gray-400">
                                         <button
                                             (click)="edit(single_list); container.scrollTop = 0"
-                                            *ngIf="checkStatus(single_list, 'edit') && currentActivity.U && edit_mode"
+                                            *ngIf="checkStatus(single_list, 'edit') && currentActivity?.U && edit_mode"
                                             mat-icon-button
                                             type="button">
                                             <mat-icon>edit</mat-icon>
                                         </button>
                                         <button
                                             (click)="delete(single_list,'C')"
-                                            *ngIf="checkStatus(single_list, 'delete') && currentActivity.D && edit_mode"
+                                            *ngIf="checkStatus(single_list, 'delete') && currentActivity?.D && edit_mode"
                                             mat-icon-button type="button">
                                             <mat-icon>delete</mat-icon>
                                         </button>
