--- a/src/app/modules/tour-plan/search-tour-plan-tab/search-tour-plan-tab.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan-tab/search-tour-plan-tab.component.html
@@ -51,7 +51,7 @@
                         </td>
                         <td style="width: 20%">{{child.StatusName}}</td>
                         <td>
-                            <button (click)="redirectTourPlan(child,'E')" *ngIf="CheckDirectionStatus(child) && currentActivity.U"
+                            <button (click)="redirectTourPlan(child,'E')" *ngIf="CheckDirectionStatus(child) && currentActivity?.U"
                                     color="primary"
                                     mat-icon-button>
                                 <mat-icon style="margin-left: 5px;" title="edit tour diary">edit</mat-icon>
