--- a/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
+++ b/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
@@ -61,7 +61,7 @@
                         </td>
                         <td style="width: 20%">{{child?.StatusName}}</td>
                         <td>
-                            <button (click)="DisplaySign(child.Signature)" *ngIf="ViewSign(child.Signature) && currentActivity.R"
+                            <button (click)="DisplaySign(child.Signature)" *ngIf="ViewSign(child.Signature) && currentActivity?.R"
                                     color="primary"
                                     mat-icon-button>
                                 <mat-icon class="text-green" title="View land">visibility</mat-icon>
